[gd_scene load_steps=8 format=3 uid="uid://dj7uo8bme7s1a"]

[ext_resource type="Script" path="res://scenes/game_action_roll/game_action_roll.gd" id="1_lq7mu"]
[ext_resource type="AudioStream" uid="uid://kld2k53nko6t" path="res://assets/sounds/sfx/roll_beep.wav" id="2_h8c1a"]
[ext_resource type="AudioStream" uid="uid://c5m3jrdsdsrbv" path="res://assets/sounds/sfx/roll_end.wav" id="3_0hs44"]
[ext_resource type="Theme" uid="uid://cfbeauogvefm7" path="res://themes/main_theme.tres" id="4_rrm7l"]

[sub_resource type="Animation" id="Animation_ry67n"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClickToStop:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.486275), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jddxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClickToStop:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jsgct"]
_data = {
"RESET": SubResource("Animation_jddxb"),
"idle": SubResource("Animation_ry67n")
}

[node name="GameActionRoll" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 132.0
offset_bottom = 21.0
script = ExtResource("1_lq7mu")

[node name="ActionsList" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 16.0
offset_bottom = 37.0
grow_horizontal = 2
columns = 4

[node name="RollTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="RollSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_h8c1a")
volume_db = -5.0
max_polyphony = 5

[node name="EndRollSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_0hs44")
volume_db = -5.0

[node name="ClickToStop" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -21.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_rrm7l")
text = "Click to stop"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jsgct")
}
autoplay = "idle"

[connection signal="timeout" from="RollTimer" to="." method="_on_roll_timer_timeout"]
